--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Configs
 
-title: "Jekyll Profile"
-name: "A Free Job Market Profile in Jekyll"
+title: "Diane Profile"
+name: "Profile for Diane Garcia"
 email: 
-url: "https://econ-691.github.io"
-baseurl: "/Jekyll-for-Job-Market"
-repository: "ECON-691/Jekyll-for-Job-Market"
+url: "https://vulture499.github.io"
+baseurl: "/Diane-Garcia-Profile"
+repository: "vulture499/Diane-Garcia-Profile"
 header:
   image: /assets/images/banner-husky.jpg
 
@@ -36,13 +36,13 @@ remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 minimal_mistakes_skin: "contrast"
 
 # settings for author profile
-author:
-  name   : "Mission III"
+author: 
+  name   : "Diane Garcia"
   avatar : "/assets/images/banner-husky.jpg"
-  bio    : "My name is Mission III, and I am the official Huskie mascot at Northern Illinois University."
+  bio    : "My name is Diane Garcia, and I am a student from Northern Illinois University."
   location: "DeKalb, Illinois"
-  github : 
-  linkedin: "school/northern-illinois-university" #This is a fake site that won't work. To add your own, make sure to include just the profile, not the full url. Eg. anna-klis-1337a150
+  github : "vulture499"
+  linkedin: #This is a fake site that won't work. To add your own, make sure to include just the profile, not the full url. Eg. anna-klis-1337a150
   email  : 
 
 
