--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ author:
   bio    : "My name is Diane Garcia, and I am a student from Northern Illinois University."
   location: "DeKalb, Illinois"
   github : "vulture499"
-  linkedin: #This is a fake site that won't work. To add your own, make sure to include just the profile, not the full url. Eg. anna-klis-1337a150
+  linkedin: "diane-garcia-957373278"#This is a fake site that won't work. To add your own, make sure to include just the profile, not the full url. Eg. anna-klis-1337a150
   email  : 
 
 
